Format sourcecode using the AS7 style http://community.jboss.org/thread/161062